[package]
name = "lz4"
description = "Lz4 compression for Rust"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[features]
#std = ["alloc"]
alloc = []

[dependencies]
bitflags = "1.2.1"
twox-hash = { version = "1.6.0", default-features = false }

[dev-dependencies]
base64 = "0.13.0"
lz4 = { path = "./", features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true
